reorganized images folder stucturer

--- a/views/includes/aboutus_sections/palla.ejs
+++ b/views/includes/aboutus_sections/palla.ejs
@@ -2,7 +2,7 @@
     <div class="container">
         <h5 class="green-text text-darken-1" style="font-weight: bold;">Palla Sportswear</h5>
         <div class="image">
-            <img class="pallalogo" src="/images/palla.png">
+            <img class="pallalogo" src="/images/icons/palla.png">
         </div>
         <p>
             <%- include('../content/palla'); %> 
