--- a/views/includes/aboutus_sections/technology.ejs
+++ b/views/includes/aboutus_sections/technology.ejs
@@ -2,14 +2,14 @@
     <div class="container">
         <h5 class="green-text text-darken-1" style="font-weight: bold;">Technology</h5>
         <div class="image">
-            <img class="tapinlogo" src="/images/tapin.png">
+            <img class="tapinlogo" src="/images/leagues/tapin.png">
         </div>
         <p>
             <%- include('../content/technology'); %>
         </p>
         <div class="row phone">
             <div class="phoneImage col s12 m6">
-                <img class="phone1" src="/images/phone1.png">
+                <img class="phone1" src="/images/phones/phone1.png">
             </div>
             <ul class="col s12 m6">
                 <li>Age and develpoment appropiate curriculum and coach licensing.</li>
@@ -25,7 +25,7 @@
                     <li class="right-align">Full communication and scheduling tools to keep coaches and players updated in real time.</li>
                 </ul>
                 <div class="phoneImage2 col s12 m6">
-                    <img class="phone2" src="/images/phone2.png">
+                    <img class="phone2" src="/images/phones/phone2.png">
                 </div>
             </div>
         </div>
