--- a/views/includes/franchise_sections/header.ejs
+++ b/views/includes/franchise_sections/header.ejs
@@ -6,7 +6,7 @@
                 <p><%- include('../content/mission_statement'); %></p>
             </div>
             <div class="col s6 image hide-on-small-only">
-                <img class="twoPhones" src="/images/shysoccerkid.png">
+                <img class="twoPhones" src="/images/backgrounds/shysoccerkid.png">
             </div>
         </div>
     </div>
