--- a/views/includes/general/navbar.ejs
+++ b/views/includes/general/navbar.ejs
@@ -5,7 +5,7 @@
                 <li><a href="/leagues">Leagues</a></li>
                 <li><a href="/franchise">Franchise</a></li>
             </div>
-            <a href="/" class="no-hover"><img class="logo" src="/images/logo-draft.png"></a>
+            <a href="/" class="no-hover"><img class="logo" src="/images/leagues/logo-draft.png"></a>
             <div class="second">
                 <li><a href="#">Join Us</a></li>
                 <li><a href="/aboutus">About Us</a></li>
