--- a/views/includes/homepage_sections/ourLeagues.ejs
+++ b/views/includes/homepage_sections/ourLeagues.ejs
@@ -3,19 +3,19 @@
         <h3 class="center-align">Our Leagues</h3>
         <div class="row">
             <div class="league col s12 m6 l3">
-                <img class="leaguesLogo" src="/images/logo-draft.png">
+                <img class="leaguesLogo" src="/images/leagues/logo-draft.png">
                 <h5>GDL MA</h5>
             </div>
             <div class="league col s12 m6 l3">
-                <img class="leaguesLogo" src="/images/red.png">
+                <img class="leaguesLogo" src="/images/leagues/red.png">
                 <h5 class="red-text">GDL RI</h5>
             </div>
             <div class="league col s12 m6 l3">
-                <img class="leaguesLogo" src="/images/orange.png">
+                <img class="leaguesLogo" src="/images/leagues/orange.png">
                 <h5 class="orange-text">GDL NH</h5>
             </div>
             <div class="league col s12 m6 l3">
-                <img class="leaguesLogo" src="/images/purple.png">
+                <img class="leaguesLogo" src="/images/leagues/purple.png">
                 <h5 class="purple-text">GDL ME</h5>
             </div>
         </div>
