--- a/views/includes/leagues_sections/stickers.ejs
+++ b/views/includes/leagues_sections/stickers.ejs
@@ -10,40 +10,40 @@
                 <td class="blue">Great Play</td>
             </tr>
             <tr>
-                <td><img class="sticker" src="/images/star.png"></td>
-                <td><img class="sticker" src="/images/heart.png"></td>
-                <td><img class="sticker" src="/images/gear.png"></td>
-                <td><img class="sticker" src="/images/handshake.png"></td>
-                <td><img class="sticker" src="/images/clap.png"></td>
+                <td><img class="sticker" src="/images/stickers/star.png"></td>
+                <td><img class="sticker" src="/images/stickers/heart.png"></td>
+                <td><img class="sticker" src="/images/stickers/gear.png"></td>
+                <td><img class="sticker" src="/images/stickers/handshake.png"></td>
+                <td><img class="sticker" src="/images/stickers/clap.png"></td>
             </tr>
         </table>
         <div class="row">
             <div class="col s6 image">
-                <img src="/images/playercard1.png" style="height: 400px;">
+                <img src="/images/player_cards/playercard1.png" style="height: 400px;">
             </div>
             <div class="col s6">
                 <table class="vertical">
                     <tr>
                         <td class="orange">MVP</td>
                         <td>
-                            <img class="sticker" src="/images/star.png">
+                            <img class="sticker" src="/images/stickers/star.png">
                         </td>
                     </tr>
                     <tr>
                         <td class="red">Hardest Worker</td>
-                        <td><img class="sticker" src="/images/heart.png"></td>
+                        <td><img class="sticker" src="/images/stickers/heart.png"></td>
                     </tr>
                     <tr>
                         <td class="grey">Best Student</td>
-                        <td><img class="sticker" src="/images/gear.png"></td>
+                        <td><img class="sticker" src="/images/stickers/gear.png"></td>
                     </tr>
                     <tr>
                         <td class="green">Best Sportsman</td>
-                        <td><img class="sticker" src="/images/handshake.png"></td>
+                        <td><img class="sticker" src="/images/stickers/handshake.png"></td>
                     </tr>
                     <tr>
                         <td class="blue">Great Play</td>
-                        <td><img class="sticker" src="/images/clap.png"></td>
+                        <td><img class="sticker" src="/images/stickers/clap.png"></td>
                     </tr>
                 </table>
             </div>
