--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -34,11 +34,19 @@ nav .nav-wrapper ul a.no-hover:hover {
 }
 
 .fullImage {
-    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('/images/defense.png') no-repeat;
+    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('/images/backgrounds/defense.png') no-repeat;
     width: 100%;
     height: 500px;
     background-size: cover;
     background-position: center;
+}
+
+.fullImageAboutUs {
+    background: url('/images/backgrounds/aboutuscover.png');
+}
+
+.fullImageFranchise {
+    background: url('/images/backgrounds/greenbackground.png');
 }
 
 .fullImageAboutUs, .fullImageFranchise {
@@ -46,14 +54,6 @@ nav .nav-wrapper ul a.no-hover:hover {
     height: 600px;
     background-size: cover;
     background-position: center;
-}
-
-.fullImageAboutUs {
-    background: url('/images/aboutuscover.png');
-}
-
-.fullImageFranchise {
-    background: url('/images/greenbackground.png');
 }
 
 .fullImageAboutUs .container, .fullImageFranchise .container {
@@ -297,7 +297,7 @@ ul.indicators {
 }
 
 .carousel-item .image {
-    background: url('/images/steve.png');
+    background: url('/images/Headshots/steve.png');
     min-height: 50px;
     width: 50px;
     background-position: center;
