--- a/views/includes/aboutus_sections/tapinLeagues.ejs
+++ b/views/includes/aboutus_sections/tapinLeagues.ejs
@@ -3,16 +3,16 @@
         <h5 class="green-text text-darken-1" style="font-weight: bold;">TapIn Leagues</h5>
         <div class="row">
             <div class="league col s12 m6 l3">
-                <img class="leaguesLogo" src="/images/tapinlogo1.png">
+                <img class="leaguesLogo" src="/images/leagues/tapinlogo1.png">
             </div>
             <div class="league col s12 m6 l3">
-                <img class="leaguesLogo" src="/images/tapinlogo2.png">
+                <img class="leaguesLogo" src="/images/leagues/tapinlogo2.png">
             </div>
             <div class="league col s12 m6 l3">
-                <img class="leaguesLogo" src="/images/tapinlogo3.png">
+                <img class="leaguesLogo" src="/images/leagues/tapinlogo3.png">
             </div>
             <div class="league col s12 m6 l3">
-                <img class="leaguesLogo" src="/images/tapinlogo4.png">
+                <img class="leaguesLogo" src="/images/leagues/tapinlogo4.png">
             </div>
         </div>
     </div>
