--- a/views/includes/homepage_sections/contactUs.ejs
+++ b/views/includes/homepage_sections/contactUs.ejs
@@ -3,13 +3,13 @@
         <h4 class="center-align white-text" style="margin: 0;">Contact Us</h4>
         <div class="row">
             <div class="col m6 mail">
-                <img class="social-icon" src="/images/email.png">
+                <img class="social-icon" src="/images/social/email.png">
                 <p class="white-text">info@gdlsoccer.com</p>
             </div>
             <div class="col m6">
-                <img class="social-icon" src="/images/fb.png">
-                <img class="social-icon" src="/images/twitter.png">
-                <img class="social-icon" src="/images/ig.png">
+                <img class="social-icon" src="/images/social/fb.png">
+                <img class="social-icon" src="/images/social/twitter.png">
+                <img class="social-icon" src="/images/social/ig.png">
             </div>
         </div>
     </div>
