--- a/views/includes/homepage_sections/partners.ejs
+++ b/views/includes/homepage_sections/partners.ejs
@@ -3,11 +3,11 @@
         <h3 class="center-align">Partners</h3>
         <div class="row">
             <div class="col s12 l6 partner-container">
-                <img class="partners-logo" src="/images/tapin.png">
+                <img class="partners-logo" src="/images/leagues/tapin.png">
                 <a href="https://tapinmobilesolutions.com/" class="btn green lighten-1">Visit Tapin Site</a>
             </div>
             <div class="col s12 l6 partner-container">
-                <img class="partners-logo" src="/images/palla.png">
+                <img class="partners-logo" src="/images/icons/palla.png">
                 <a href="https://www.pallasport.com/" class="btn green lighten-1">Visit Palla Site</a>
             </div>
         </div>
