--- a/views/includes/leagues_sections/header.ejs
+++ b/views/includes/leagues_sections/header.ejs
@@ -6,7 +6,7 @@
                 <p><%- include('../content/mission_statement'); %></p>
             </div>
             <div class="col s6 image hide-on-small-only">
-                <img class="twoPhones" src="/images/2phones.png">
+                <img class="twoPhones" src="/images/phones/2phones.png">
             </div>
         </div>
     </div>
