--- a/views/includes/minis/ourProgramCard.ejs
+++ b/views/includes/minis/ourProgramCard.ejs
@@ -2,7 +2,7 @@
     <div class="card hoverable">
         <div class="card-content">
             <span class="card-menu card-title green-text text-darken-2 activator"><i class="material-icons">menu</i></span>
-            <img class="ourProgram-img <%= image %>" src="/images/<%= image %>.png">
+            <img class="ourProgram-img <%= image %>" src="/images/icons/<%= image %>.png">
             <span class="card-title green-text text-darken-2"><%= title %></span>
         </div>
         <div class="card-reveal">
