--- a/views/includes/minis/whatWeDoCard.ejs
+++ b/views/includes/minis/whatWeDoCard.ejs
@@ -1,7 +1,7 @@
 <div class="col s12 l4">
     <div class="card green <%= color %>">
         <div class="card-content">
-            <img class="whatWeDo-logo" src="images/<%= image %>">
+            <img class="whatWeDo-logo" src="images/icons/<%= image %>">
             <span class="card-title white-text"><%= title %></span>
             <p class="white-text"><%= text %></p>
         </div>
