--- a/views/includes/content/mission_statement.ejs
+++ b/views/includes/content/mission_statement.ejs
@@ -1,3 +1,3 @@
-The mission of the Grassroots Developement League (GDL) is to provide fun, engaging, player centric
-program using a unique technology that is built specifically to emphasize developement whilst 
-administrating diverse and inclusive environment.
+The mission of the Grassroots Development League (GDL) is to provide, through the adoption of a 
+unique technology that is built specifically to emphasize development, a fun, engaging, player centric 
+program whilst administering a diverse and inclusive environment.
