--- a/views/includes/general/navbar.ejs
+++ b/views/includes/general/navbar.ejs
@@ -7,7 +7,7 @@
             </div>
             <a href="/" class="no-hover"><img class="logo" src="/images/leagues/logo-draft.png"></a>
             <div class="second">
-                <li><a href="#">Join Us</a></li>
+                <li><a href="/joinUs">Join Us</a></li>
                 <li><a href="/aboutus">About Us</a></li>
                 <li><a href="#">Contact</a></li>
             </div>
