--- a/views/includes/homepage_sections/testimonials.ejs
+++ b/views/includes/homepage_sections/testimonials.ejs
@@ -4,34 +4,26 @@
         <div class="row carousel-wrapper">
             <div class="carousel carousel-slider center">
                 <div class="carousel-item white" href="#one!">
-                  <p class="testimonial left-align">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus magnam nisi, officia, quae suscipit placeat aut aperiam odio deserunt tenetur ratione repudiandae natus dolorum obcaecati itaque a? Nostrum, nulla molestias?                  </p>
-                  <div class="testInfo">
+                  <div class="imageContainer">
                     <div class="image"></div>
-                    <p class="bold authorName">-Steve Schector</p>
+                  </div>
+                  <div class="testimonial">
+                    <p class="name bold">Steve Schector</p>
+                    <p class="title">Proffesional footballer</p>
+                    <p class="content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, nihil recusandae omnis reiciendis iste velit quia saepe ea commodi ipsum.</p>
+                    <div class="stars"></div>
                   </div>
                 </div> 
                 <div class="carousel-item white" href="#two!">
-                  <p class="testimonial left-align">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus magnam nisi, officia, quae suscipit placeat aut aperiam odio deserunt tenetur ratione repudiandae natus dolorum obcaecati itaque a? Nostrum, nulla molestias?                  </p>
-                  <div class="testInfo">
+                  <div class="imageContainer">
                     <div class="image"></div>
-                    <p class="bold authorName">-Steve Schector</p>
+                  </div>
+                  <div class="testimonial">
+                    <p class="name bold">Steve Schector</p>
+                    <p class="title">Proffesional footballer</p>
+                    <p class="content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, nihil recusandae omnis reiciendis iste velit quia saepe ea commodi ipsum.</p>
                   </div>
                 </div> 
-                <div class="carousel-item white" href="#three!">
-                  <p class="testimonial left-align">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus magnam nisi, officia, quae suscipit placeat aut aperiam odio deserunt tenetur ratione repudiandae natus dolorum obcaecati itaque a? Nostrum, nulla molestias?                  </p>
-                  <div class="testInfo">
-                    <div class="image"></div>
-                    <p class="bold authorName">-Steve Schector</p>
-                  </div>
-                </div> 
-                <div class="carousel-item white" href="#four!">
-                  <p class="testimonial left-align">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus magnam nisi, officia, quae suscipit placeat aut aperiam odio deserunt tenetur ratione repudiandae natus dolorum obcaecati itaque a? Nostrum, nulla molestias?                  </p>
-                  <div class="testInfo">
-                    <div class="image"></div>
-                    <p class="bold authorName">-Steve Schector</p>
-                  </div>
-                </div> 
-                
             </div>
         </div>
     </div>
