joinUs info sections

--- a/views/joinUs.ejs
+++ b/views/joinUs.ejs
@@ -11,6 +11,14 @@
     <!-- Full Width Image -->
     <%- include ('includes/homepage_sections/fullWidthImage'); %>
 
+    <!-- Types -->
+    <%- include('includes/joinus_sections/types'); %>
+
+    <!-- Info -->
+    <%- include('includes/joinus_sections/cost'); %>
+    <%- include('includes/joinus_sections/included'); %>
+    <%- include('includes/joinus_sections/howToJoin'); %>
+
     <!-- Contact Us -->
     <%- include('includes/homepage_sections/contactUs'); %>
 
