designed contact form

--- a/views/joinUs.ejs
+++ b/views/joinUs.ejs
@@ -19,6 +19,9 @@
     <%- include('includes/joinus_sections/included'); %>
     <%- include('includes/joinus_sections/howToJoin'); %>
 
+    <!-- Form -->
+    <%- include('includes/joinus_sections/contactForm'); %>
+
     <!-- Contact Us -->
     <%- include('includes/homepage_sections/contactUs'); %>
 
