--- a/views/includes/homepage_sections/testimonials.ejs
+++ b/views/includes/homepage_sections/testimonials.ejs
@@ -9,8 +9,8 @@
                   </div>
                   <div class="testimonial">
                     <p class="name bold">Steve Schector</p>
-                    <p class="title">Proffesional footballer</p>
-                    <p class="content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, nihil recusandae omnis reiciendis iste velit quia saepe ea commodi ipsum.</p>
+                    <p class="title green-text text-darken-2">Proffesional footballer</p>
+                    <p class="content grey-text text-darken-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, nihil recusandae omnis reiciendis iste velit quia saepe ea commodi ipsum.</p>
                     <div class="stars"></div>
                   </div>
                 </div> 
@@ -20,8 +20,9 @@
                   </div>
                   <div class="testimonial">
                     <p class="name bold">Steve Schector</p>
-                    <p class="title">Proffesional footballer</p>
-                    <p class="content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, nihil recusandae omnis reiciendis iste velit quia saepe ea commodi ipsum.</p>
+                    <p class="title green-text text-darken-2">Proffesional footballer</p>
+                    <p class="content grey-text text-darken-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, nihil recusandae omnis reiciendis iste velit quia saepe ea commodi ipsum.</p>
+                    <div class="stars"></div>
                   </div>
                 </div> 
             </div>
