--- a/views/includes/homepage_sections/partners.ejs
+++ b/views/includes/homepage_sections/partners.ejs
@@ -1,4 +1,4 @@
-<div class="partners grey lighten-2">
+<div class="partners">
     <div class="container">
         <h3 class="center-align">Partners</h3>
         <div class="row">
