--- a/views/includes/homepage_sections/news.ejs
+++ b/views/includes/homepage_sections/news.ejs
@@ -1,5 +1,31 @@
 <div class="news">
-    <div class="container">
+    <div class="container" style="width: 100%;">
         <h3 class="center-align">News</h3>
+        <div class="row">
+            <div class="col s12 m6 l4">
+                <div class="news-card hoverable">
+                    <div class="league red">
+                        GDL MA
+                    </div>
+                    <p class="title white-text bold">TapIn Partnership</p>
+                </div>
+            </div>  
+            <div class="col s12 m6 l4">
+                <div class="news-card hoverable">
+                    <div class="league red">
+                        GDL MA
+                    </div>
+                    <p class="title white-text bold">TapIn Partnership</p>
+                </div>
+            </div>  
+            <div class="col s12 m6 l4">
+                <div class="news-card hoverable">
+                    <div class="league red">
+                        GDL MA
+                    </div>
+                    <p class="title white-text bold">TapIn Partnership</p>
+                </div>
+            </div>  
+        </div>
     </div>
 </div>
