--- a/views/includes/aboutus_sections/ourTeam.ejs
+++ b/views/includes/aboutus_sections/ourTeam.ejs
@@ -2,27 +2,27 @@
     <div class="container">
         <h5 class="green-text text-darken-1" style="font-weight: bold;">Our Team</h5>
         <div class="row">
-            <div class="person col s12 m6 l4">
+            <div class="person col s12 l4">
                 <img class="leaguesLogo" src="/images/Headshots/steve.png">
                 <p class="name bold">Steve Schecter</p>
                 <p class="title green-text darken-1">Co-Founder</p>
-                <p class="subtitle grey-text">former COO of GPS</p>
+                <p class="subtitle grey-text">Founder of TapIn, ExchangeBlvd</p>
                 <p class="description left-align">
-                    <%- include('../content/justinDescription'); %>
+                    <%- include('../content/steveDescription'); %>
                 </p>
             </div>
-            <div class="person col s12 m6 l4">
-                <img class="leaguesLogo" src="/images/Headshots/steve.png">
-                <p class="name bold">Steve Schecter</p>
+            <div class="person col s12 l4">
+                <img class="leaguesLogo" src="/images/Headshots/craig.png">
+                <p class="name bold">Craig Porter</p>
                 <p class="title green-text darken-1">Co-Founder</p>
-                <p class="subtitle grey-text">former COO of GPS</p>
+                <p class="subtitle grey-text">Product Strategy of TapIn</p>
                 <p class="description left-align">
-                    <%- include('../content/justinDescription'); %>
+                    <%- include('../content/craigDescription'); %>
                 </p>
             </div>
-            <div class="person col s12 m6 l4">
-                <img class="leaguesLogo" src="/images/Headshots/steve.png">
-                <p class="name bold">Steve Schecter</p>
+            <div class="person col s12 l4">
+                <img class="leaguesLogo" src="/images/Headshots/JC.png">
+                <p class="name bold">Justin Capell</p>
                 <p class="title green-text darken-1">Co-Founder</p>
                 <p class="subtitle grey-text">former COO of GPS</p>
                 <p class="description left-align">
