--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -25,6 +25,9 @@
     <!-- Social Good -->
     <%- include('includes/aboutus_sections/socialGood'); %>
 
+    <!-- Player Cards -->
+    <%- include('includes/aboutus_sections/playerCard'); %>
+
     <!-- Leagues -->
     <%- include('includes/aboutus_sections/tapinLeagues'); %>
 
