--- a/views/includes/homepage_sections/news.ejs
+++ b/views/includes/homepage_sections/news.ejs
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col s12 m6 l4">
                 <div class="news-card hoverable">
-                    <div class="league red">
+                    <div class="league green darken-3 white-text">
                         GDL MA
                     </div>
                     <p class="title white-text bold">TapIn Partnership</p>
@@ -12,18 +12,18 @@
             </div>  
             <div class="col s12 m6 l4">
                 <div class="news-card hoverable">
-                    <div class="league red">
-                        GDL MA
+                    <div class="league pink white-text">
+                        GDL NH
                     </div>
-                    <p class="title white-text bold">TapIn Partnership</p>
+                    <p class="title white-text bold">Palla Partnership</p>
                 </div>
             </div>  
-            <div class="col s12 m6 l4">
+            <div class="col s12 l4">
                 <div class="news-card hoverable">
-                    <div class="league red">
-                        GDL MA
+                    <div class="league orange white-text">
+                        GDL NH
                     </div>
-                    <p class="title white-text bold">TapIn Partnership</p>
+                    <p class="title white-text bold">2020 Launch in New England</p>
                 </div>
             </div>  
         </div>
