set up news route

--- a/views/includes/general/navbar.ejs
+++ b/views/includes/general/navbar.ejs
@@ -9,7 +9,7 @@
             <div class="second">
                 <li><a href="/joinUs">Join Us</a></li>
                 <li><a href="/aboutus">About Us</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="/news">News</a></li>
             </div>
         </ul>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger hide-on-med-and-up"><i class="material-icons">menu</i></a>
