--- a/views/news.ejs
+++ b/views/news.ejs
@@ -8,8 +8,11 @@
     <!-- Navigation -->
     <%- include('includes/general/navbar'); %>
     
-    <!-- Full Width Image -->
-    <%- include ('includes/homepage_sections/fullWidthImage'); %>
+    <!-- Header -->
+    <%- include('includes/news_sections/header'); %>
+
+    <!-- News Container -->
+    <%- include('includes/news_sections/newsContainer'); %>
 
     <!-- Contact Us -->
     <%- include('includes/homepage_sections/contactUs'); %>
