--- a/views/includes/minis/newsStory.ejs
+++ b/views/includes/minis/newsStory.ejs
@@ -1,9 +1,10 @@
 <div class="story">
     <div class="header">
-        <div class="league"><%= league %></div>
-        <p class="title"><%= title %></p>
-        <hr>
-        <p class="info"><%= info %></p>
+        <div class="top">
+            <div class="league MA"><%= league %></div>
+            <p class="title bold"><%= title %></p>
+        </div>
+        <p class="info center-align"><%= info %></p>
     </div>
     <div class="image">
         <img src="<%= img %>">
