--- a/views/includes/news_sections/header.ejs
+++ b/views/includes/news_sections/header.ejs
@@ -1,3 +1,3 @@
-<div class="newsHeader">
-    <h3>News</h3>
+<div class="newsHeader valign-wrapper">
+    <h3 class="white-text bold">News</h3>
 </div>
