--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -2,13 +2,12 @@ body {
     font-family: -apple-system, Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-<<<<<<< HEAD
 html, body {
     overflow-x: hidden;
-=======
+}
+
 h3 {
     margin: 0 !important;
->>>>>>> news_section
 }
 
 nav {
