--- a/views/includes/minis/newsStory.ejs
+++ b/views/includes/minis/newsStory.ejs
@@ -1,7 +1,7 @@
 <div class="story">
     <div class="header">
         <div class="top">
-            <div class="league MA"><%= league %></div>
+            <div class="league <%= league %>">GDL <%= league %></div>
             <p class="title bold"><%= title %></p>
         </div>
         <p class="info center-align"><%= info %></p>
