--- a/views/includes/news_sections/newsContainer.ejs
+++ b/views/includes/news_sections/newsContainer.ejs
@@ -1,14 +1,14 @@
 <div class="newsContainer">
     <div class="container">
         <%- include('../minis/newsStory', {
-            league: "GDL MA",
+            league: "MA",
             title: "TapIn Partnership",
             info: "Boston, MA June 3, 2020",
             img: "/images/news/news1.png",
             content: "../content/stories/tapinPartnership",
         }); %>
         <%- include('../minis/newsStory', {
-            league: "GDL NH",
+            league: "NH",
             title: "Palla Partnership",
             info: "Boston, MA June 6, 2020",
             img: "/images/news/news2.png",
