--- a/views/includes/minis/newsStory.ejs
+++ b/views/includes/minis/newsStory.ejs
@@ -1,4 +1,4 @@
-<div class="story">
+<div class="story section scrollspy" id="story<%= id %>">
     <div class="header">
         <div class="top">
             <div class="league <%= league %>">GDL <%= league %></div>
