--- a/views/includes/news_sections/newsContainer.ejs
+++ b/views/includes/news_sections/newsContainer.ejs
@@ -1,6 +1,7 @@
-<div class="newsContainer">
+<div class="newsContainer col s12 m9 l10">
     <div class="container">
         <%- include('../minis/newsStory', {
+            id:1,
             league: "MA",
             title: "TapIn Partnership",
             info: "Boston, MA June 3, 2020",
@@ -8,6 +9,7 @@
             content: "../content/stories/tapinPartnership",
         }); %>
         <%- include('../minis/newsStory', {
+            id:2,
             league: "NH",
             title: "Palla Partnership",
             info: "Boston, MA June 6, 2020",
