--- a/views/news.ejs
+++ b/views/news.ejs
@@ -11,8 +11,15 @@
     <!-- Header -->
     <%- include('includes/news_sections/header'); %>
 
-    <!-- News Container -->
-    <%- include('includes/news_sections/newsContainer'); %>
+    <div class="row">
+        <!-- News Container -->
+        <%- include('includes/news_sections/newsContainer'); %>
+
+        <!-- Scrollspy -->
+        <%- include('includes/news_sections/scrollspy'); %>
+    </div>
+
+    
 
     <!-- Contact Us -->
     <%- include('includes/homepage_sections/contactUs'); %>
