--- a/views/includes/homepage_sections/news.ejs
+++ b/views/includes/homepage_sections/news.ejs
@@ -2,30 +2,36 @@
     <div class="container" style="width: 100%;">
         <h3 class="center-align">News</h3>
         <div class="row">
-            <div class="col s12 m6 l4">
-                <div class="news-card hoverable">
-                    <div class="league green darken-3 white-text">
-                        GDL MA
+            <a href="/news#story1">
+                <div class="col s12 m6 l4">
+                    <div class="news-card hoverable">
+                        <div class="league green darken-3 white-text">
+                            GDL MA
+                        </div>
+                        <p class="title white-text bold">TapIn Partnership</p>
                     </div>
-                    <p class="title white-text bold">TapIn Partnership</p>
-                </div>
-            </div>  
-            <div class="col s12 m6 l4">
-                <div class="news-card hoverable">
-                    <div class="league pink white-text">
-                        GDL NH
+                </div>  
+            </a>
+            <a href="/news#story2">
+                <div class="col s12 m6 l4">
+                    <div class="news-card hoverable">
+                        <div class="league pink white-text">
+                            GDL NH
+                        </div>
+                        <p class="title white-text bold">Palla Partnership</p>
                     </div>
-                    <p class="title white-text bold">Palla Partnership</p>
-                </div>
-            </div>  
-            <div class="col s12 l4">
-                <div class="news-card hoverable">
-                    <div class="league orange white-text">
-                        GDL NH
+                </div>  
+            </a>
+            <a href="/news#story3">
+                <div class="col s12 l4">
+                    <div class="news-card hoverable">
+                        <div class="league orange white-text">
+                            GDL NH
+                        </div>
+                        <p class="title white-text bold">2020 Launch in New England</p>
                     </div>
-                    <p class="title white-text bold">2020 Launch in New England</p>
-                </div>
-            </div>  
+                </div>  
+            </a>
         </div>
     </div>
 </div>
